package reader;

public interface Reader {

    public void readFile(String fileName);

}
