@startuml

package userInterface {
    class UserArgs {
        - String inputFile
        - String outputFile
        - String shapeSpecification
        - String nbWaterSources
        - String soilType
        - String heatmap
    }
}

Package translator {
    class Reader {
        + void readFile(String : fileName)
        - String readMetadata(m : Structs.Mesh , key: String)
    }
    class Writer {
        + void generateEndMesh(outFileName: String, fileName: String)
        + Structs.Mesh syncMeshBuilderWithMap(startMesh: Structs.Mesh)
        - createOutputFile(endMesh: Structs.Mesh , fileName: String)
    }
}

Package Legacy {
    class LegacyMesh
    class LegacyPolygon
    class LegacyPoint
    class LegacySegment

}

Package ca.uqam.info.inf5153.ptg {
    class Main
    class Controller {
        + void createWorld()
        + void setWorldHeight()
        + void setWorldWidth()
        + void addTile()
        + void addNeighbor()
        + String getTileColor()
        + void setMode()
    }
}

Package world {
     class world
     class Tuile
     class Coordinate
     Interface Biome
}

Package geometry {
    class Circle {
        - Coordinate center
        - double bRadius
        - double sRadius
        - double shortestSide
    }
    class Coordinate {
        - float x
        - float y
        - float z
    }
    class Ellipse {
        - Random random
        - Coordinate ellipseCenter
        - double a
        - double b
        - double defineShape(width: int, height: int)
        - double findMinorAxis(majorAxis: double)
        - Coordinate setNewCenter(width: int, height: int)
        + boolean isInEllipse(c: Coordinate)
    }
}

translator -- Legacy
translator -- ca.uqam.info.inf5153.ptg
ca.uqam.info.inf5153.ptg -- world
ca.uqam.info.inf5153.ptg -- userInterface
world -- geometry


@enduml